[gd_scene load_steps=10 format=2]

[ext_resource path="res://lava_anim/lava_tile4.png" type="Texture" id=1]
[ext_resource path="res://lava_anim/lava_tile6.png" type="Texture" id=2]
[ext_resource path="res://lava_anim/lava_tile1.png" type="Texture" id=3]
[ext_resource path="res://script/LavaTile.gd" type="Script" id=4]
[ext_resource path="res://lava_anim/lava_tile2.png" type="Texture" id=5]
[ext_resource path="res://lava_anim/lava_tile5.png" type="Texture" id=6]
[ext_resource path="res://lava_anim/lava_tile3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "close",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[node name="LavaTile" type="Node2D"]
position = Vector2( 200, 136 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
